# Chess-Game

./: CMakeLists.txt  CMakeUserPresets.json  README.md
Chess/: CMakeLists.txt  main.cpp  tester.cpp
Chess/Board/: Board.cpp  Board.h  MoveState.h
Chess/ChessEngine/: ChessEngine.cpp  ChessEngine.h
Chess/ConsoleUi/: ConsoleUi.cpp  ConsoleUi.h
Chess/Game/: Game.cpp  Game.h
Chess/HandlePlayerInput/: HandlePlayerInput.cpp  HandlePlayerInput.h
Chess/Pieces/: Color.h  Move.h  Piece.h  PieceType.h  Position.h
Chess/Pieces/Bishop/: Bishop.cpp  Bishop.h
Chess/Pieces/King/: King.cpp  King.h
Chess/Pieces/Knight/: Knight.cpp  Knight.h
Chess/Pieces/Pawn/: Pawn.cpp  Pawn.h
Chess/Pieces/Queen/: Queen.cpp  Queen.h
Chess/Pieces/Rook/: Rook.cpp  Rook.h
Chess/SFMLUi/: BoardRenderer.cpp  BoardRenderer.h  GameSFML.cpp  GameSFML.h  InputHander.cpp  InputHandler.h
Chess/Tests/: MockTests.cpp  ParametrialTests.cpp  StandardBoardTests.cpp
